saving nb progresss, waiting for WT

--- a/notebooks/20190805_DVV_filter_by_dcm_attributes.ipynb
+++ b/notebooks/20190805_DVV_filter_by_dcm_attributes.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "4   72327  a_E45PRVD3     8  002a           20151106113728.000  (0008,002a)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4  plax     39533  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "4                         iE33  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,36 +448,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "Minimum number of frames: 10\n",
+      "Any empties in df? No\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([], dtype=int64), array([], dtype=int64))"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#print(df_region_sfa.shape)\n",
     "frame_vals = df_num_frames['value'].tolist()\n",
-    "print(min(frame_vals))\n",
-    "#df_num_frames['value'].value_counts()"
+    "print('Minimum number of frames: ' + str(min(frame_vals)))\n",
+    "#df_num_frames['value'].value_counts()\n",
+    "\n",
+    "import numpy as np\n",
+    "print('Any empties in df? No')\n",
+    "np.where(df_num_frames.applymap(lambda x: x==''))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>instanceidk</th>\n",
+       "      <th>view</th>\n",
+       "      <th>studyidk</th>\n",
+       "      <th>tag1</th>\n",
+       "      <th>tag2</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>a_8Z0BWX0M</td>\n",
+       "      <td>696109</td>\n",
+       "      <td>plax</td>\n",
+       "      <td>39531</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0008</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>a_8Z0BWZGH</td>\n",
+       "      <td>696112</td>\n",
+       "      <td>a4c</td>\n",
+       "      <td>39531</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0008</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>a_8ZGVB44R</td>\n",
+       "      <td>696422</td>\n",
+       "      <td>plax</td>\n",
+       "      <td>39552</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0008</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>a_8ZGVB5TY</td>\n",
+       "      <td>696426</td>\n",
+       "      <td>a4c</td>\n",
+       "      <td>39552</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0008</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>a_8ZGVB7C1</td>\n",
+       "      <td>696430</td>\n",
+       "      <td>a2c</td>\n",
+       "      <td>39552</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0008</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(0, 7)"
+       "      filename  instanceidk  view  studyidk tag1  tag2 value\n",
+       "27  a_8Z0BWX0M       696109  plax     39531   28  0008    69\n",
+       "43  a_8Z0BWZGH       696112   a4c     39531   28  0008    23\n",
+       "58  a_8ZGVB44R       696422  plax     39552   28  0008    72\n",
+       "73  a_8ZGVB5TY       696426   a4c     39552   28  0008    76\n",
+       "88  a_8ZGVB7C1       696430   a2c     39552   28  0008    75"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +594,23 @@
     "# run cell above to see if frame_vals < 1\n",
     "#df_num_frames.dtypes\n",
     "df_num_frames = df_num_frames[df_num_frames['value'] != '1']\n",
-    "\n",
+    "df_num_frames.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series([], Name: value, dtype: int64)\n"
+     ]
+    }
+   ],
+   "source": [
     "# Ultrasound Color (0028,0014) should be '00'\n",
     "## WAITING ON: new meta_lite from WT\n",
     "print(df_ultra_color['value'].value_counts()) # should be 00's, 01's\n",
@@ -500,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -606,7 +725,7 @@
        "88  a_8ZGVB7C1       696430   a2c     39552   28  0008    75"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
