--- a/notebooks/WT_test_d02_dicom_metadata_processing.ipynb
+++ b/notebooks/WT_test_d02_dicom_metadata_processing.ipynb
@@ -21,14 +21,57 @@
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
     "from json import load\n",
-    "#import psycopg2"
+    "#import psycopg2\n",
+    "\n",
+    "projectdir = os.path.join(os.path.dirname(os.getcwd()),'src')\n",
+    "sys.path.append(projectdir) # to use project modules in notebook\n",
+    "datadir = os.path.join(projectdir, 'data')\n",
+    "metadata_path = os.path.join(datadir, '02_intermediate','dicom_metadata.csv')\n",
+    "\n",
+    "from d00_utils import dcm_utils\n",
+    "from d00_utils.s3_utils import get_matching_s3_keys\n",
+    "from d00_utils.db_utils import dbReadWriteRaw, dbReadWriteClean\n",
+    "from d02_intermediate.clean_dcm import clean_dcm_meta"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Specify paths and import project modules"
+    "### Working functions for creating and retrieving meta_lite"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting the metadata lite takes several minutes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/envs/usal_echo/lib/python3.6/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
+      "  \"\"\")\n",
+      "/home/ubuntu/anaconda3/envs/usal_echo/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2963: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "/home/ubuntu/wiebke/usal_echo/src/d00_utils/db_utils.py:79: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].replace(\"\\|\", \",\", regex=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_dcm_meta()"
    ]
   },
   {
@@ -37,14 +80,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "projectdir = os.path.dirname(os.getcwd())\n",
-    "sys.path.append(projectdir) # to use project modules in notebook\n",
-    "datadir = os.path.join(projectdir, 'data')\n",
-    "metadata_path = os.path.join(datadir, '02_intermediate','dicom_metadata.csv')\n",
-    "\n",
-    "from src.d00_utils import dcm_utils\n",
-    "from src.d00_utils.s3_utils import get_matching_s3_keys\n",
-    "from src.d00_utils.db_utils import dbReadWriteRaw, dbReadWriteClean"
+    "meta = io_clean.get_table('meta_lite')\n",
+    "print(len(meta))\n",
+    "meta.head()"
    ]
   },
   {
@@ -184,115 +222,6 @@
    "outputs": [],
    "source": [
     "credentials_file = os.path.join(os.path.expanduser('~'),'.psql_credentials.json')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Getting the metadata lite takes several minutes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "io_clean = dbReadWriteClean()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "io_clean.engine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "io_clean = dbReadWriteClean()\n",
-    "\n",
-    "with open(os.path.join(projectdir, 'src', 'd02_intermediate', 'dicom_tags.json')) as f:\n",
-    "    dicom_tags = load(f)\n",
-    "for k, v in dicom_tags.items():\n",
-    "    dicom_tags[k] = tuple(v)\n",
-    "    print(k, v[0])\n",
-    "    query = \"SELECT m.* FROM raw.metadata AS m WHERE m.tag1 = {} and m.tag2 = {}\"#.format(v[0], v[1])\n",
-    "    df = pd.read_sql_query(query, con=io_clean.engine, chunksize=100000)\n",
-    "    io_clean.save_to_db(df, 'meta_test', if_exists=\"append\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_dcm(metadata_path, to_db=False, credentials_file=None, db_table=None):\n",
-    "    # Get dicom tags and metadata path from config file(s)\n",
-    "    with open(\"dicom_tags.json\") as f:\n",
-    "        dicom_tags = load(f)\n",
-    "    for k, v in dicom_tags.items():\n",
-    "        dicom_tags[k] = tuple(v)\n",
-    "\n",
-    "    io_clean = dbReadWriteClean()\n",
-    "\n",
-    "    datalist = []\n",
-    "    # Read metadata in chunks to avoid kernel crashing due to large data volume.\n",
-    "    for chunk in pd.read_csv(\n",
-    "        metadata_path,\n",
-    "        chunksize=1000000,\n",
-    "        dtype={\n",
-    "            \"dirname\": \"category\",\n",
-    "            \"filename\": \"category\",\n",
-    "            \"tag1\": \"category\",\n",
-    "            \"tag2\": \"category\",\n",
-    "        },\n",
-    "    ):\n",
-    "        chunk[\"tags\"] = list(zip(chunk[\"tag1\"], chunk[\"tag2\"]))\n",
-    "        filtered_chunk = chunk[chunk[\"tags\"].isin(dicom_tags.values())]\n",
-    "        if to_db is True:\n",
-    "            try:\n",
-    "                io_clean.save_to_db(filtered_chunk, db_table, if_exists=\"append\")\n",
-    "            except:\n",
-    "                raise\n",
-    "            print(\"saved chunks to db\")\n",
-    "        datalist.append(filtered_chunk)\n",
-    "\n",
-    "    meta = pd.concat(datalist)\n",
-    "\n",
-    "    return meta\n",
-    "\n",
-    "\n",
-    "query = '''\n",
-    "        SELECT * FROM raw.metadata m WHERE m.tag1 = b.key1 and m.tag2 = b.key2\n",
-    "        '''\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "meta = clean_dcm(dicom_tags, metadata_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(len(meta))\n",
-    "meta.head()"
    ]
   },
   {
