--- a/notebooks/WT_test_d02_dicom_metadata_processing.ipynb
+++ b/notebooks/WT_test_d02_dicom_metadata_processing.ipynb
@@ -50,26 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/envs/usal_echo/lib/python3.6/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
-      "  \"\"\")\n",
-      "/home/ubuntu/anaconda3/envs/usal_echo/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2963: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "/home/ubuntu/wiebke/usal_echo/src/d00_utils/db_utils.py:79: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].replace(\"\\|\", \",\", regex=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "clean_dcm_meta()"
    ]
@@ -80,9 +63,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "io_clean = dbReadWriteClean()\n",
     "meta = io_clean.get_table('meta_lite')\n",
     "print(len(meta))\n",
     "meta.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meta.dtypes"
    ]
   },
   {
