download dcm from s3

--- a/notebooks/WT_test_d03_classification_predict_view.ipynb
+++ b/notebooks/WT_test_d03_classification_predict_view.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,32 +47,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-b1d1d5a8ed7e>, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-b1d1d5a8ed7e>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    SELECT COLUMN_NAME, DATA_TYPE\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import os\n",
-    "from json import load\n",
-    "from sqlalchemy import create_engine\n",
-    "from sqlalchemy.schema import CreateSchema\n",
-    "from sqlalchemy import inspect\n",
-    "import tempfile\n",
-    "import gc\n",
+    "directory = os.path.expanduser('~/data/01_raw/test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imagedict = {}\n",
+    "predictions = {}\n",
+    "for filename in os.listdir(directory):\n",
+    "    if \"jpg\" in filename:\n",
+    "        image = imread(directory + filename, flatten=True).astype(\"uint8\")\n",
+    "        imagedict[filename] = [image.reshape((224, 224, 1))]\n",
     "\n",
-    "query = \"SELECT COLUMN_NAME, DATA_TYPE \\\n",
-    "            FROM INFORMATION_SCHEMA.COLUMNS \\\n",
-    "            WHERE \\\n",
-    "            TABLE_NAME = 'meta_lite';\"\"\n"
+    "tf.reset_default_graph()\n",
+    "sess = tf.Session()\n",
+    "model = vgg.Network(0.0, 0.0, feature_dim, label_dim, False)\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "\n",
+    "saver = tf.train.Saver()\n",
+    "saver.restore(sess, model_name)\n",
+    "\n",
+    "for filename in imagedict:\n",
+    "    predictions[filename] = np.around(\n",
+    "        model.probabilities(sess, imagedict[filename]), decimals=3\n",
+    "    )\n",
+    "\n",
+    "return predictions\n"
    ]
   },
   {
