--- a/notebooks/WT_test_d01_download_dicom.ipynb
+++ b/notebooks/WT_test_d01_download_dicom.ipynb
@@ -29,6 +29,7 @@
     "from d02_intermediate.clean_xtdb import *\n",
     "from d00_utils.db_utils import *\n",
     "from d00_utils.s3_utils import *\n",
+    "from d00_utils.dcm_utils import decompress_dcm\n",
     "\n",
     "db_table = 'metadata'\n",
     "credentials_file = os.path.join(os.path.expanduser('~'), '.psql_credentials.json')"
@@ -75,8 +76,7 @@
     "            for obj in resp['Contents']:\n",
     "                if obj['Key'].startswith(prefix) and obj['Key'].endswith(suffix):\n",
     "                    keys.append(obj['Key'])\n",
-    "                    s3.download_file(bucket, obj['Key'], os.path.join(outdir, \n",
-    "                                                                      'a_' + ''.join(p.split('/a')) + '.dcm'))\n",
+    "                    s3.download_file(bucket, obj['Key'], os.path.join(outdir, 'a_' + ''.join(prefix.split('/a')) + '.dcm'))\n",
     "        except:\n",
     "            print(prefix, 'DOWNLOAD ERROR')\n",
     "        \n",
@@ -86,7 +86,7 @@
     "        except KeyError:\n",
     "            break\n",
     "\n",
-    "    return keys"
+    "    return"
    ]
   },
   {
@@ -102,14 +102,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instances_with_labels_scrappy100 = io_views.get_table('instances_with_labels_scrappy100')\n",
-    "instances_labeled_other_scrappy100 = io_views.get_table('instances_labeled_other_scrappy100')\n",
-    "\n",
-    "prefix_labelled = instances_with_labels_scrappy100['studyidk'].astype(str) + '/a_' + instances_with_labels_scrappy100['instancefilename'].astype(str)\n",
-    "prefix_other = instances_labeled_other_scrappy100['studyidk'].astype(str) + '/a_' + instances_labeled_other_scrappy100['instancefilename'].astype(str)\n",
-    "\n",
-    "lablelled_datadir = os.path.expanduser('/home/ubuntu/data/01_raw/dcm_sample_labelled')\n",
-    "other_datadir = os.path.expanduser('/home/ubuntu/data/01_raw/dcm_sample_other')"
+    "instances = io_views.get_table('instances_w_labels_test_downsampleby5')\n",
+    "prefix = instances['studyidk'].astype(str) + '/a_' + instances['filename'].astype(str)\n",
+    "filenames = 'a_' + instances['studyidk'].astype(str) + '_' + instances['filename'].astype(str) + '.dcm'\n",
+    "download_dict = dict(zip(prefix, filenames))\n",
+    "datadir = os.path.expanduser('/home/ubuntu/data/01_raw/test_downsampleby5')\n",
+    "raw_datadir = os.path.join(datadir, 'raw')"
    ]
   },
   {
@@ -118,12 +116,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for p in prefix_labelled.values:\n",
-    "    extract_imgs_from_dicom('cibercv', prefix=p, suffix='.dcm', outdir=lablelled_datadir)\n",
-    "    \n",
-    "for p in prefix_other.values:\n",
-    "    extract_imgs_from_dicom('cibercv', prefix=p, suffix='.dcm', outdir=other_datadir)"
+    "for p in list(download_dict.keys()):\n",
+    "    tmpfile = extract_imgs_from_dicom('cibercv', prefix=p, suffix='.dcm', outdir=datadir)\n",
+    "    dcm_filepath=os.path.join(datadir, download_dict[p])\n",
+    "    dcm_rawfilepath=os.path.join(raw_datadir,download_dict[p]+'_raw')\n",
+    "    decompress_dcm(dcm_filepath, dcm_rawfilepath)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "s3 = boto3.client('s3')\n",
+    "\n",
+    "keys = []\n",
+    "kwargs = {'Bucket': 'cibercv'}\n",
+    "\n",
+    "tmp = tempfile.NamedTemporaryFile()\n",
+    "\n",
+    "# os.makedirs(outdir, exist_ok=True)\n",
+    "\n",
+    "if isinstance(prefix, str):\n",
+    "    kwargs['Prefix'] = p\n",
+    "while True:\n",
+    "    resp = s3.list_objects_v2(**kwargs)\n",
+    "    try:\n",
+    "        for obj in resp['Contents']:\n",
+    "            if obj['Key'].startswith(p) and obj['Key'].endswith(suffix):\n",
+    "                print(obj['Key'])\n",
+    "                keys.append(obj['Key'])\n",
+    "                s3.download_file(bucket, obj['Key'], tmp.name) #os.path.join(outdir, 'a_' + ''.join(prefix.split('/a')) + '.dcm'))\n",
+    "    except:\n",
+    "        print(p, 'DOWNLOAD ERROR')\n",
+    "\n",
+    "    try:\n",
+    "        kwargs['ContinuationToken'] = resp['NextContinuationToken']\n",
+    "\n",
+    "    except KeyError:\n",
+    "        break\n",
+    "\n",
+    "tmp.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
