download images from s3

--- a/notebooks/WT_test_d01_download_dicom.ipynb
+++ b/notebooks/WT_test_d01_download_dicom.ipynb
@@ -105,9 +105,8 @@
     "instances = io_views.get_table('instances_w_labels_test_downsampleby5')\n",
     "prefix = instances['studyidk'].astype(str) + '/a_' + instances['filename'].astype(str)\n",
     "filenames = 'a_' + instances['studyidk'].astype(str) + '_' + instances['filename'].astype(str) + '.dcm'\n",
-    "download_dict = dict(zip(prefix, filenames))\n",
-    "datadir = os.path.expanduser('/home/ubuntu/data/01_raw/test_downsampleby5')\n",
-    "raw_datadir = os.path.join(datadir, 'raw')"
+    "\n",
+    "download_dict = dict(zip(prefix, filenames))"
    ]
   },
   {
@@ -116,50 +115,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "datadir = os.path.expanduser('/home/ubuntu/data/01_raw/test_downsampleby5')\n",
+    "raw_datadir = os.path.join(datadir, 'raw')\n",
+    "\n",
     "for p in list(download_dict.keys()):\n",
-    "    tmpfile = extract_imgs_from_dicom('cibercv', prefix=p, suffix='.dcm', outdir=datadir)\n",
-    "    dcm_filepath=os.path.join(datadir, download_dict[p])\n",
-    "    dcm_rawfilepath=os.path.join(raw_datadir,download_dict[p]+'_raw')\n",
+    "    download_s3_objects('cibercv', outfile=download_dict[p], prefix=p, suffix='.dcm')\n",
+    "    \n",
+    "    dcm_filepath=os.path.join(datadir, d)\n",
+    "    dcm_rawfilepath=os.path.join(raw_datadir, download_dict[p]+'_raw')\n",
+    "    \n",
     "    decompress_dcm(dcm_filepath, dcm_rawfilepath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "s3 = boto3.client('s3')\n",
-    "\n",
-    "keys = []\n",
-    "kwargs = {'Bucket': 'cibercv'}\n",
-    "\n",
-    "tmp = tempfile.NamedTemporaryFile()\n",
-    "\n",
-    "# os.makedirs(outdir, exist_ok=True)\n",
-    "\n",
-    "if isinstance(prefix, str):\n",
-    "    kwargs['Prefix'] = p\n",
-    "while True:\n",
-    "    resp = s3.list_objects_v2(**kwargs)\n",
-    "    try:\n",
-    "        for obj in resp['Contents']:\n",
-    "            if obj['Key'].startswith(p) and obj['Key'].endswith(suffix):\n",
-    "                print(obj['Key'])\n",
-    "                keys.append(obj['Key'])\n",
-    "                s3.download_file(bucket, obj['Key'], tmp.name) #os.path.join(outdir, 'a_' + ''.join(prefix.split('/a')) + '.dcm'))\n",
-    "    except:\n",
-    "        print(p, 'DOWNLOAD ERROR')\n",
-    "\n",
-    "    try:\n",
-    "        kwargs['ContinuationToken'] = resp['NextContinuationToken']\n",
-    "\n",
-    "    except KeyError:\n",
-    "        break\n",
-    "\n",
-    "tmp.name"
    ]
   },
   {
