logging and s3 downloads

--- a/notebooks/WT_test_d01_download_decompress_dicom.ipynb
+++ b/notebooks/WT_test_d01_download_decompress_dicom.ipynb
@@ -35,8 +35,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dcm_dir = os.path.join(datadir, '01_raw','test')\n",
-    "img_dir = os.path.join(datadir, '02_intermediate','test_images')"
+    "dcm_dir = os.path.join(datadir, '01_raw','test_downsampleby5')\n",
+    "img_dir = os.path.join(datadir, '02_intermediate','test_downsampleby5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcm_utils.dcmdir_to_jpgs_for_classification(dcm_dir, img_dir)"
    ]
   },
   {
@@ -49,15 +58,6 @@
     "for f in os.listdir(dcm_dir): \n",
     "    print(f)\n",
     "    paths.append(os.path.join(dcm_dir, f))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm_utils.dcmdir_to_jpgs_for_classification(dcm_dir, img_dir)"
    ]
   },
   {
