--- a/notebooks/WT_test_d01_download_dicom.ipynb
+++ b/notebooks/WT_test_d01_download_dicom.ipynb
@@ -30,6 +30,7 @@
     "from d00_utils.db_utils import *\n",
     "from d00_utils.s3_utils import *\n",
     "from d00_utils.dcm_utils import decompress_dcm\n",
+    "from d00_utils.log_utils import get_logs\n",
     "\n",
     "db_table = 'metadata'\n",
     "credentials_file = os.path.join(os.path.expanduser('~'), '.psql_credentials.json')"
@@ -43,50 +44,6 @@
    "source": [
     "io_views = dbReadWriteViews()\n",
     "io_views.list_tables()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_imgs_from_dicom(bucket, prefix='', suffix='.dcm', outdir=None):\n",
-    "    \"\"\"\n",
-    "    Get all the keys with a specific suffix from a s3 bucket.\n",
-    "\n",
-    "    :param bucket: Name of the S3 bucket.\n",
-    "    :param prefix: Only fetch objects whose key starts with this prefix (optional).\n",
-    "    :param suffix: Only fetch objects whose keys end with this suffix, default='dcm'\n",
-    "    :return: list of keys\n",
-    "    \"\"\"\n",
-    "    s3 = boto3.client('s3')\n",
-    "\n",
-    "    keys = []\n",
-    "    kwargs = {'Bucket': bucket}\n",
-    "\n",
-    "    os.makedirs(outdir, exist_ok=True)\n",
-    "\n",
-    "    if isinstance(prefix, str):\n",
-    "        kwargs['Prefix'] = prefix\n",
-    "\n",
-    "    while True:\n",
-    "        resp = s3.list_objects_v2(**kwargs)\n",
-    "        try:\n",
-    "            for obj in resp['Contents']:\n",
-    "                if obj['Key'].startswith(prefix) and obj['Key'].endswith(suffix):\n",
-    "                    keys.append(obj['Key'])\n",
-    "                    s3.download_file(bucket, obj['Key'], os.path.join(outdir, 'a_' + ''.join(prefix.split('/a')) + '.dcm'))\n",
-    "        except:\n",
-    "            print(prefix, 'DOWNLOAD ERROR')\n",
-    "        \n",
-    "        try:\n",
-    "            kwargs['ContinuationToken'] = resp['NextContinuationToken']\n",
-    "        \n",
-    "        except KeyError:\n",
-    "            break\n",
-    "\n",
-    "    return"
    ]
   },
   {
@@ -119,11 +76,10 @@
     "raw_datadir = os.path.join(datadir, 'raw')\n",
     "\n",
     "for p in list(download_dict.keys()):\n",
-    "    download_s3_objects('cibercv', outfile=download_dict[p], prefix=p, suffix='.dcm')\n",
-    "    \n",
-    "    dcm_filepath=os.path.join(datadir, d)\n",
+    "    dcm_filepath=os.path.join(datadir, download_dict[p])\n",
     "    dcm_rawfilepath=os.path.join(raw_datadir, download_dict[p]+'_raw')\n",
-    "    \n",
+    "   \n",
+    "    download_s3_objects('cibercv', outfile=dcm_filepath, prefix=p, suffix='.dcm') \n",
     "    decompress_dcm(dcm_filepath, dcm_rawfilepath)"
    ]
   },
@@ -132,7 +88,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "get_logs('d01_data', 'ERROR')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download_dcm_images():"
+   ]
   }
  ],
  "metadata": {
