running to get 1000 test imgs

--- a/notebooks/WT_test_d01_download_decompress_dicom.ipynb
+++ b/notebooks/WT_test_d01_download_decompress_dicom.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,10 +54,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = []\n",
-    "for f in os.listdir(dcm_dir): \n",
-    "    print(f)\n",
-    "    paths.append(os.path.join(dcm_dir, f))"
+    "# paths = []\n",
+    "# for f in os.listdir(dcm_dir): \n",
+    "#     print(f)\n",
+    "#     paths.append(os.path.join(dcm_dir, f))"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images, orig_images = dcm_utils.dcmdir_to_jpgs_for_segmentation(dcm_dir, '/home/ubuntu/data/01_raw/test/raw/a_113150_2WD5N6AS.dcm')"
+    "# images, orig_images = dcm_utils.dcmdir_to_jpgs_for_segmentation(dcm_dir, '/home/ubuntu/data/01_raw/test/raw/a_113150_2WD5N6AS.dcm')"
    ]
   },
   {
