download decompress script created

--- a/notebooks/WT_test_d01_download_dicom.ipynb
+++ b/notebooks/WT_test_d01_download_dicom.ipynb
@@ -27,9 +27,9 @@
     "\n",
     "from d01_data.ingestion_xtdb import ingest_xtdb\n",
     "from d02_intermediate.clean_xtdb import *\n",
-    "from d00_utils.db_utils import *\n",
-    "from d00_utils.s3_utils import *\n",
-    "from d00_utils.dcm_utils import decompress_dcm\n",
+    "#from d00_utils.db_utils import *\n",
+    "#from d00_utils.s3_utils import *\n",
+    "from d02_intermediate.dcm_utils import decompress_dcm\n",
     "from d00_utils.log_utils import get_logs\n",
     "\n",
     "db_table = 'metadata'\n",
