--- a/notebooks/20190728_YN_test_segmentation_masks.ipynb
+++ b/notebooks/20190728_YN_test_segmentation_masks.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "4  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,17 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "o"
+    "os.makedirs('masks', exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        " ((394.759850247165, 169.027515266066), (405.207415803109, 164.762224740933))]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        " (485.0, 380.0)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -436,10 +436,10 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"149.83240066237994\" height=\"240.8040348752729\" viewBox=\"381.4443052277765 153.08133204165657 149.83240066237994 240.8040348752729\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,546.966698958586)\"><g><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"485.0,380.0 396.0,162.0\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"480.90687919463096,381.66359060402704 522.358037931813,364.740869835177\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"440.86949019132993,384.966698958586 521.074113795439,352.222609505532\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"429.163205376604,376.703439089368 519.790189659065,339.704349175886\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"417.456920561879,368.44017922015 518.5062655226909,327.186088846241\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"414.154231775845,356.746093449311 517.222341386317,314.667828516595\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"414.373094834886,343.614309906859 515.938417249944,302.14956818695\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"414.591957893927,330.482526364406 513.929243991481,289.927395801643\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"414.810820952967,317.350742821954 509.95025098874396,278.509415880742\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"414.81752349084,304.305575272088 505.971257986005,267.091435959842\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"413.472106739674,291.812419725546 501.992264983267,255.673456038941\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"412.126689988508,279.319264179004 498.013271980529,244.255476118041\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"410.781273237342,266.826108632461 494.03427897779096,232.83749619714\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"409.435856486176,254.332953085919 487.736778044551,222.366063091903\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"408.09043973501,241.83979753937697 479.013988928905,212.884770574897\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"403.816837539432,230.54209384857998 470.29119981325897,203.40347805788997\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"399.33221608832804,219.33054022082 461.568410697612,193.922185540883\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"394.84759463722395,208.11898659306 452.84562158196604,184.440893023876\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"390.36297318612,196.9074329653 442.03707901554395,175.811123704663\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"392.279550741495,183.08254579819697 423.622247409326,170.286674222798\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"2.0\" points=\"394.759850247165,169.027515266066 405.207415803109,164.762224740933\" opacity=\"0.8\" /></g></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.multilinestring.MultiLineString at 0x7f3a7a933048>"
+       "<shapely.geometry.multilinestring.MultiLineString at 0x7f18f1fce908>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -459,10 +459,10 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"149.83240066237994\" height=\"240.8040348752729\" viewBox=\"381.4443052277765 153.08133204165657 149.83240066237994 240.8040348752729\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,546.966698958586)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"2.0\" opacity=\"0.6\" d=\"M 485.0,380.0 L 480.90687919463096,381.66359060402704 L 440.86949019132993,384.966698958586 L 429.163205376604,376.703439089368 L 417.456920561879,368.44017922015 L 414.154231775845,356.746093449311 L 414.373094834886,343.614309906859 L 414.591957893927,330.482526364406 L 414.810820952967,317.350742821954 L 414.81752349084,304.305575272088 L 413.472106739674,291.812419725546 L 412.126689988508,279.319264179004 L 410.781273237342,266.826108632461 L 409.435856486176,254.332953085919 L 408.09043973501,241.83979753937697 L 403.816837539432,230.54209384857998 L 399.33221608832804,219.33054022082 L 394.84759463722395,208.11898659306 L 390.36297318612,196.9074329653 L 392.279550741495,183.08254579819697 L 394.759850247165,169.027515266066 L 396.0,162.0 L 405.207415803109,164.762224740933 L 423.622247409326,170.286674222798 L 442.03707901554395,175.811123704663 L 452.84562158196604,184.440893023876 L 461.568410697612,193.922185540883 L 470.29119981325897,203.40347805788997 L 479.013988928905,212.884770574897 L 487.736778044551,222.366063091903 L 494.03427897779096,232.83749619714 L 498.013271980529,244.255476118041 L 501.992264983267,255.673456038941 L 505.971257986005,267.091435959842 L 509.95025098874396,278.509415880742 L 513.929243991481,289.927395801643 L 515.938417249944,302.14956818695 L 517.222341386317,314.667828516595 L 518.5062655226909,327.186088846241 L 519.790189659065,339.704349175886 L 521.074113795439,352.222609505532 L 522.358037931813,364.740869835177 L 485.0,380.0 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x7f3a7a94c780>"
+       "<shapely.geometry.polygon.Polygon at 0x7f18f1fce240>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,16 +473,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f3a79582278>"
+       "<matplotlib.image.AxesImage at 0x7f18f0b873c8>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
