finished study meas eda

--- a/notebooks/20190808_YN_study_measurement_gt_eda.ipynb
+++ b/notebooks/20190808_YN_study_measurement_gt_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/envs/yoni/lib/python3.6/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
+      "  \"\"\")\n"
+     ]
+    }
+   ],
    "source": [
     "from d00_utils.db_utils import dbReadWriteClean, dbReadWriteViews\n",
     "io_clean = dbReadWriteClean()\n",
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +146,7 @@
        "4      2882                 125     P1/2t VM  88.291224       ms"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +258,7 @@
        "8  a2c     39553  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +395,7 @@
        "4       a4c            ven         ed  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,17 +408,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_recommendation(row):\n",
-    "    return 'normal' if row['value'] >= 60 else 'abnormal' if row['value'] <= 40 else 'greyzone'"
+    "    return 'normal' if row['value'] >= 60 else 'abnormal' if row['value'] < 40 else 'greyzone'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +473,7 @@
        "Name: name, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +517,7 @@
        "Name: name, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +635,7 @@
        "260      6086                  46  FE(MDD-ps4)  56.657825        %"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +663,7 @@
        "Name: value, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +718,7 @@
        "Name: recommendation, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +741,7 @@
        "Name: recommendation, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +813,7 @@
        "Name: value, dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +859,7 @@
        "Name: recommendation, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +870,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "normal      0.557848\n",
+       "greyzone    0.369250\n",
+       "abnormal    0.072902\n",
+       "Name: recommendation, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter_df['recommendation'].value_counts()/filter_df['recommendation'].value_counts().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +991,7 @@
        "43275       abnormal  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
